<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".activity.LoginActivity">

    <!--Toolbar-->
    <include layout="@layout/tool_bar" />

    <!--内容部分layout_behavior:用来控制内容区域-->
    <LinearLayout
        style="@style/ToolbarContent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/et_input"
                    android:layout_width="350dp"
                    android:layout_height="250dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="90dp"
                    android:background="@drawable/bg_test"
                    android:gravity="left|top"
                    android:hint="测试用例如下:(标点符号英文输入且勿重复输入)\nA:A0,A1,A2\nB:B0,B1,B2\nC:C0,C1,C2"
                    android:textColor="#000"
                    android:textColorHint="#555"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_test_content" />

                <Button
                    android:id="@+id/generate"
                    android:text="生成正交表"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_color_primary"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textColor="@drawable/selector_text_color_primary_reverse"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>

        <!--        </com.jwenfeng.library.pulltorefresh.PullToRefreshLayout>-->

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>