<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--设置按钮-->
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/add"
        android:title="添加"
        app:showAsAction="always" />
</menu>
