...
                    android:paddingRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/agree"
                        android:text="存为图片"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
...
